--- a/style/index.css
+++ b/style/index.css
@@ -6,3 +6,7 @@
 @import 'burger.css';
 @import 'hero.css';
 @import 'steps.css';
+@import 'wishlist.css';
+@import 'profile.css';
+@import 'category.css';
+@import 'item.css';
