--- a/style/edit.css
+++ b/style/edit.css
@@ -41,21 +41,37 @@
 }
 
 .edit_name {
+    display: flex;
+    gap: 36px;
     margin-bottom: 44px;
 }
 
 .edit_label {
-    font-size: 50px;
     max-width: 686px;
+}
+
+.edit_input {
+    font-size: 48px;
+    display: block;
+    width: 100%;
+    height: 100px;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    color: #282828;
+    padding: 0 32px;
+    border: none;
 }
 
 .edit_label-text {
     display: block;
+    font-size: 50px;
     margin-bottom: 14px;
 }
 
 .edit_birthdate {
     margin-bottom: 44px;
+    display: flex;
+    gap: 12px;
 }
 
 .edit_label_select {
@@ -75,12 +91,104 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    pointer-events: none;
+}
+
+.edit_label_select:focus-within::after {
+    transform: translateY(-50%) rotate(180deg);
 }
 
 .edit_select {
+    appearance: none;
+    background-color: #FFFFFF;
+    color: #282828;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 48px;
+    padding: 22px 52px 22px 32px;
+    outline: none;
+}
+
+.edit_description {
+    margin-bottom: 68px;
+}
+
+.edit_description-input {
+    max-width: 1420px;
+    width: 100%;
+    min-height: 250px;
+    padding: 35px 32px;
+    font-size: 38px;
+    resize: none;
+    background-color: #FFFFFF;
+    border: 3px solid #365ABA;
+    border-radius: 15px;
+}
+
+.edit_wish {
 
 }
 
+.edit__wish {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 44px 36px;
+    margin-bottom: 44px;
+}
+
+.edit_label_price {
+    flex: 0 1 50%;
+}
+
+.edit__wish-price {
+    display: flex;
+    gap: 36px;
+    align-items: flex-end;
+}
+
+.edit_label-select {
+
+}
+
+.edit_select_currency {
+    width: 100%;
+}
+
+
+.edit_wish-photo {
+    width: 285px;
+    height: 285px;
+    margin-bottom: 152px;
+}
+
+.edit_label-photo {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+
+.edit_wish-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+}
+
+.edit__wish-delete {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+}
+
+.edit_submit-btn {
+    margin-right: 22px;
+}
+
+.edit_submit-btn:last-child {
+    margin-right: 0;
+}
 
 
 
