--- a/style/nav.css
+++ b/style/nav.css
@@ -10,3 +10,9 @@
 .nav_btn:last-child {
     margin-right: 0;
 }
+
+@media (max-width: 1200px) {
+    .nav_btn {
+        margin-right: 18px;
+    }
+}
