--- a/style/hero.css
+++ b/style/hero.css
@@ -24,3 +24,33 @@
     text-align: center;
     margin-bottom: 135px;
 }
+
+@media (max-width: 1700px) {
+    .hero_title {
+        font-size: 200px;
+        margin-bottom: 12px;
+    }
+
+    .hero_description {
+        font-size: 42px;
+        max-width: 860px;
+        margin-bottom: 66px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .hero {
+        padding: 32px;
+    }
+
+    .hero_title {
+        font-size: 150px;
+        margin-bottom: 0;
+    }
+
+    .hero_description {
+        font-size: 36px;
+        max-width: 770px;
+        margin-bottom: 32px;
+    }
+}
