--- a/style/style.css
+++ b/style/style.css
@@ -93,3 +93,13 @@ fieldset {
         font-size: 28px;
     }
 }
+
+@media (max-width: 1200px) {
+    .container {
+        padding: 0 22px;
+    }
+
+    .btn {
+        font-size: 24px;
+    }
+}
