--- a/style/wishlist.css
+++ b/style/wishlist.css
@@ -16,3 +16,16 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 50px 40px;
 }
+
+@media (max-width: 1700px) {
+    .wishlist_items {
+        gap: 40px 30px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .wishlist_items {
+        gap: 30px 20px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
