--- a/style/item.css
+++ b/style/item.css
@@ -27,3 +27,10 @@
     font-size: 28px;
     margin-bottom: 20px;
 }
+
+@media (max-width: 1700px) {
+    .item_image {
+        margin-bottom: 40px;
+    }
+}
+
