--- a/style/profile.css
+++ b/style/profile.css
@@ -35,3 +35,22 @@
     font-size: 32px;
 }
 
+@media (max-width: 1200px) {
+    .profile_avatar {
+        max-width: 466px;
+        margin-right: 34px;
+    }
+
+    .profile_content {
+        padding-bottom: 145px;
+    }
+
+    .profile_birthday {
+        font-size: 32px;
+        margin-bottom: 12px;
+    }
+
+    .profile_edit {
+        gap: 2px;
+    }
+}
