--- a/style/category.css
+++ b/style/category.css
@@ -1,4 +1,3 @@
-
 .categories_item {
     margin-bottom: 78px;
 }
@@ -11,7 +10,7 @@
 
 @media (max-width: 1700px) {
     .categories_item {
-        max-width: 84px;
+        margin-bottom: 84px;
     }
 
     .categories_title {
