--- a/style/header.css
+++ b/style/header.css
@@ -27,3 +27,15 @@
         height: 48px;
     }
 }
+
+@media (max-width: 992px) {
+    .header {
+        position: relative;
+    }
+
+    .header_logo {
+        width: 59px;
+        height: 59px;
+    }
+}
+
