--- a/style/style.css
+++ b/style/style.css
@@ -103,3 +103,9 @@ fieldset {
         font-size: 24px;
     }
 }
+
+@media (max-width: 992px) {
+    .container {
+        padding: 0 34px;
+    }
+}
