--- a/style/category.css
+++ b/style/category.css
@@ -17,3 +17,25 @@
         margin-bottom: 30px;
     }
 }
+
+@media (max-width: 992px) {
+    .categories_item {
+        margin-bottom: 56px;
+    }
+
+    .categories_title {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 740px) {
+    .categories_item {
+        margin-bottom: 42px;
+    }
+
+    .categories_title {
+        font-size: 32px;
+        margin-bottom: 22px;
+    }
+}
