--- a/style/edit.css
+++ b/style/edit.css
@@ -1,5 +1,5 @@
 .edit {
-    margin-bottom: 174px;
+    padding-bottom: 174px;
 }
 
 .edit_avatar {
@@ -18,6 +18,7 @@
 .edit_avatar-load {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .edit_label-avatar {
@@ -194,7 +195,7 @@
 
     .edit_avatar-image {
         max-width: 466px;
-        margin-right: 56px;
+        margin-right: 34px;
     }
 
     .edit_name {
@@ -228,3 +229,160 @@
     }
 }
 
+@media (max-width: 992px) {
+    .edit {
+        padding-bottom: 80px;
+    }
+
+    .edit_avatar {
+        margin-bottom: 64px;
+    }
+
+    .edit_avatar-image {
+        max-width: 340px;
+        margin-right: 25px;
+    }
+
+    .edit_icon-avatar {
+        flex: 0 0 30px;
+    }
+
+    .edit_label-avatar {
+        font-size: 24px;
+        gap: 5px;
+    }
+
+    .edit_avatar-delete {
+        font-size: 24px;
+        gap: 5px;
+    }
+
+    .edit_name {
+        gap: 44px;
+        margin-bottom: 44px;
+    }
+
+    .edit_birthdate {
+        margin-bottom: 44px;
+    }
+
+    .edit_description-input {
+        min-height: 503px;
+    }
+
+    .edit_description {
+        margin-bottom: 62px;
+    }
+
+    .edit_wish-photo {
+        margin-bottom: 62px;
+    }
+
+   .edit_submit-wrapper {
+       display: flex;
+       flex-wrap: wrap;
+       gap: 44px 18px;
+   }
+}
+
+@media (max-width: 740px) {
+    .edit {
+        padding-top: 16px;
+        padding-bottom: 46px;
+    }
+
+    .edit_avatar {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 32px;
+    }
+
+    .edit_avatar-image {
+        max-width: 160px;
+        margin-right: 0;
+        margin-bottom: 16px;
+    }
+
+    .edit_icon-avatar {
+        flex-basis: 16px;
+
+    }
+
+    .edit_label-avatar {
+        font-size: 14px;
+        gap: 6px;
+        justify-content: center;
+    }
+
+    .edit_avatar-delete {
+        font-size: 14px;
+        gap: 6px;
+        justify-content: center;
+    }
+
+    .edit_avatar-load {
+        align-items: center;
+    }
+
+    .edit_input {
+        font-size: 20px;
+        height: 47px;
+        padding: 0 18px;
+    }
+
+    .edit_label-text {
+        font-size: 24px;
+        margin-bottom: 12px;
+    }
+
+    .edit_name {
+        gap: 24px;
+        margin-bottom: 24px;
+    }
+
+    .edit_birthdate {
+        margin-bottom: 24px;
+    }
+
+    .edit_description-input {
+        min-height: 288px;
+    }
+
+    .edit_description {
+        margin-bottom: 24px;
+    }
+
+    .edit_select {
+        border-radius: 8px;
+        font-size: 20px;
+        padding: 12px 27px 12px 18px;
+    }
+
+    .edit_label_select:after {
+        width: 18px;
+        height: 18px;
+    }
+
+    .edit_wish {
+        gap: 24px;
+    }
+
+    .edit_select_currency {
+        border-radius: 15px;
+    }
+
+    .edit_wish-price {
+        gap: 14px;
+    }
+
+    .edit_wish-photo {
+        width: 288px;
+        height: 288px;
+        margin-bottom: 32px;
+    }
+
+
+    .edit_submit-wrapper {
+        gap: 24px;
+    }
+}
