--- a/style/hero.css
+++ b/style/hero.css
@@ -54,3 +54,30 @@
         margin-bottom: 32px;
     }
 }
+
+@media (max-width: 992px) {
+    .hero_title {
+        font-size: 118px;
+    }
+
+    .hero_description {
+        font-size: 26px;
+        max-width: 590px;
+        margin-bottom: 100px;
+    }
+}
+
+@media (max-width: 740px) {
+    .hero_title {
+        font-size: 96px;
+        margin-bottom: 8px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .hero_description {
+        font-size: 18px;
+        margin-bottom: 54px;
+    }
+}
