--- a/style/profile.css
+++ b/style/profile.css
@@ -31,6 +31,7 @@
 .profile_edit {
     display: flex;
     gap: 7px;
+    text-align: left;
     align-items: center;
     font-size: 32px;
 }
@@ -52,5 +53,65 @@
 
     .profile_edit {
         gap: 2px;
+    }
+}
+
+@media (max-width: 992px) {
+    .profile_avatar {
+        max-width: 340px;
+        margin-right: 20px;
+    }
+
+    .profile_content {
+        padding-bottom: 68px;
+    }
+
+    .profile_birthday {
+        margin-bottom: 24px;
+    }
+
+    .profile_edit {
+        gap: 7px;
+    }
+
+    .profile_edit-icon {
+        width: 30px;
+    }
+}
+
+@media (max-width: 740px) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .profile_avatar {
+        max-width: 160px;
+        margin-right: 0;
+        margin-bottom: 16px;
+    }
+
+    .profile_content {
+        padding-bottom: 0;
+        align-items: center;
+    }
+
+    .profile_fullname {
+        margin-bottom: 4px;
+        font-size: 36px;
+    }
+
+    .profile_birthday {
+        margin-bottom: 18px;
+        font-size: 16px;
+    }
+
+    .profile_edit {
+        gap: 6px;
+        font-size: 14px;
+    }
+
+    .profile_edit-icon {
+        width: 16px;
     }
 }
