--- a/style/modal.css
+++ b/style/modal.css
@@ -15,4 +15,179 @@
     margin: auto;
     background-color: #FFFFFF;
     color: #282828;
+    padding: 74px 116px 188px;
+    border-radius: 25px;
+    max-width: 1000px;
+}
+
+.modal_title {
+    text-align: center;
+    font-weight: 400;
+    font-size: 64px;
+    margin-bottom: 48px;
+}
+
+.modal_description {
+    text-align: center;
+    font-weight: 300;
+    font-size: 41px;
+    margin-bottom: 40px;
+}
+
+.modal_field {
+    margin-bottom: 66px;
+}
+
+.modal_label {
+    display: block;
+    margin-bottom: 32px;
+}
+
+.modal_label:last-child {
+    margin-bottom: 0;
+}
+
+.modal_input {
+    font-size: 48px;
+    display: block;
+    width: 100%;
+    height: 120px;
+    background-color: #FFFFFF;
+    color: #282828;
+    padding: 0 38px;
+    border: 3px solid #365ABA;
+    border-radius: 15px;
+}
+
+.modal_btn {
+    background-color: #365ABA;
+    color: #FFFFFF;
+    border-radius: 15px;
+    padding: 20px 40px;
+    font-size: 59px;
+    width: 100%;
+}
+
+.modal_close {
+    position: absolute;
+    top: 34px;
+    right: 34px;
+    cursor: pointer;
+    border: none;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    border-radius: 12px;
+}
+
+.modal_close:focus-visible {
+    outline-color: #365ABA;
+}
+
+@media (max-width: 1200px) {
+    .modal_main {
+        padding: 102px 40px 138px;
+        max-width: 1000px;
+    }
+
+    .modal_title {
+        font-size: 50px;
+        margin-bottom: 40px;
+    }
+
+    .modal_description {
+        font-size: 34px;
+        margin-bottom: 52px;
+    }
+
+    .modal_field {
+        margin-bottom: 74px;
+    }
+
+    .modal_label {
+        margin-bottom: 24px;
+    }
+
+    .modal_input {
+        padding: 0 36px;
+        height: 100px;
+    }
+
+    .modal_btn {
+        font-size: 48px;
+    }
+
+    .modal_close {
+        top: 28px;
+        right: 28px;
+    }
+}
+
+@media (max-width: 992px) {
+    .modal_main {
+        padding: 102px 40px;
+        max-width: 600px;
+    }
+
+    .modal_description {
+        margin-bottom: 56px;
+    }
+
+    .modal_field {
+        margin-bottom: 62px;
+    }
+
+    .modal_input {
+        font-size: 32px;
+    }
+
+    .modal_btn {
+        font-size: 36px;
+    }
+}
+
+@media (max-width: 740px) {
+    .modal {
+        padding: 10px;
+    }
+
+    .modal_main {
+        padding: 70px 16px 42px;
+        border-radius: 15px;
+    }
+
+    .modal_title {
+        font-size: 36px;
+        padding: 14px;
+    }
+
+    .modal_description {
+        font-size: 18px;
+        margin-bottom: 17px;
+    }
+
+    .modal_field {
+        margin-bottom: 18px;
+    }
+
+    .modal_label {
+        margin-bottom: 12px;
+    }
+
+    .modal_input {
+        font-size: 24px;
+        height: 60px;
+        padding: 0 20px;
+    }
+
+    .modal_btn {
+        font-size: 24px;
+        padding: 20px 15px;
+    }
+
+    .modal_close {
+        width: 34px;
+        height: 34px;
+        top: 16px;
+        right: 16px;
+    }
 }
