--- a/style/edit.css
+++ b/style/edit.css
@@ -71,6 +71,9 @@
 
 .edit_birthdate {
     margin-bottom: 44px;
+}
+
+.edit_birthdate-wrapper {
     display: flex;
     gap: 12px;
 }
@@ -278,11 +281,11 @@
         margin-bottom: 62px;
     }
 
-   .edit_submit-wrapper {
-       display: flex;
-       flex-wrap: wrap;
-       gap: 44px 18px;
-   }
+    .edit_submit-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 44px 18px;
+    }
 }
 
 @media (max-width: 740px) {
