--- a/style/edit.css
+++ b/style/edit.css
@@ -10,9 +10,10 @@
 
 .edit_avatar-image {
     max-width: 437px;
-    width: 100%;
+    width: 437px;
     border-radius: 50%;
     margin-right: 106px;
+    object-fit: cover;
 }
 
 .edit_avatar-load {
@@ -197,7 +198,8 @@
     }
 
     .edit_avatar-image {
-        max-width: 466px;
+        height: 466px;
+        width: 466px;
         margin-right: 34px;
     }
 
@@ -242,7 +244,8 @@
     }
 
     .edit_avatar-image {
-        max-width: 340px;
+        height: 340px;
+        width: 340px;
         margin-right: 25px;
     }
 
@@ -301,7 +304,8 @@
     }
 
     .edit_avatar-image {
-        max-width: 160px;
+        height: 160px;
+        width: 160px;
         margin-right: 0;
         margin-bottom: 16px;
     }
