--- a/style/edit.css
+++ b/style/edit.css
@@ -49,7 +49,7 @@
 }
 
 .edit_label {
-    max-width: 686px;
+    max-width: 700px;
 }
 
 .edit_input {
@@ -132,7 +132,7 @@
 
 .edit__wish {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(288px, 700px));
     gap: 44px 36px;
     margin-bottom: 44px;
 }
